Update url to actual openapi doc

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        url: "swagger.yaml",
+        url: "https://raw.githubusercontent.com/switchbird/teamspowershellrestapi-docs/main/openapi.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
